--- a/mobile-app/www/index.html
+++ b/mobile-app/www/index.html
@@ -2258,6 +2258,56 @@
       gap: 18px;
       z-index: 1;
     }
+    
+    /* Mini Dashboard Geral - Todos os Clientes */
+    .lav2-dashboard-geral {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 16px;
+      margin-bottom: 20px;
+    }
+    @media (max-width: 800px) {
+      .lav2-dashboard-geral { grid-template-columns: 1fr; gap: 12px; }
+    }
+    .lav2-dashboard-card {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      padding: 20px;
+      background: linear-gradient(145deg, rgba(20, 20, 25, 0.9), rgba(15, 15, 18, 0.95));
+      backdrop-filter: blur(16px);
+      border: 1px solid rgba(16, 185, 129, 0.2);
+      border-radius: 16px;
+      transition: all 0.3s;
+    }
+    .lav2-dashboard-card:hover {
+      border-color: rgba(16, 185, 129, 0.5);
+      box-shadow: 0 8px 30px rgba(16, 185, 129, 0.15);
+      transform: translateY(-2px);
+    }
+    .lav2-dash-icon {
+      width: 50px; height: 50px;
+      border-radius: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-shrink: 0;
+    }
+    .lav2-dash-info {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+    }
+    .lav2-dash-value {
+      font-size: 24px;
+      font-weight: 700;
+      color: #fff;
+    }
+    .lav2-dash-label {
+      font-size: 12px;
+      color: rgba(255, 255, 255, 0.5);
+    }
+    
     .lav2-icon-badge {
       width: 60px; height: 60px;
       background: linear-gradient(135deg, #ec4899, #a855f7);
@@ -8384,24 +8434,50 @@
                   <span>Ciclo: Mensal</span>
                 </div>
               </div>
-
-              <!-- Dashboard Lucro Geral -->
-              <div class="lav2-client-card" style="--client-color: #10b981; margin-top: auto; cursor: default;">
-                <div class="lav2-client-name">
-                  <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#10b981" stroke-width="2">
-                    <line x1="12" y1="1" x2="12" y2="23"/><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/>
-                  </svg>
-                  Lucro Geral
-                </div>
-                <div style="margin-top: 12px;">
-                  <div style="font-size: 28px; font-weight: 700; color: #10b981; text-shadow: 0 0 20px rgba(16, 185, 129, 0.4);" id="lav2-total-lucro">R$ 0,00</div>
-                  <div style="font-size: 12px; color: rgba(255,255,255,0.5); margin-top: 4px;">Este período</div>
-                </div>
-              </div>
             </div>
 
             <!-- Main Content -->
             <div class="lav2-main">
+              <!-- Mini Dashboard Geral - Todos os Clientes -->
+              <div class="lav2-dashboard-geral">
+                <div class="lav2-dashboard-card">
+                  <div class="lav2-dash-icon" style="background: linear-gradient(135deg, #10b981 0%, #059669 100%);">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
+                      <line x1="12" y1="1" x2="12" y2="23"/><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/>
+                    </svg>
+                  </div>
+                  <div class="lav2-dash-info">
+                    <span class="lav2-dash-value" id="lav2-total-lucro">R$ 0,00</span>
+                    <span class="lav2-dash-label">Faturamento Total</span>
+                  </div>
+                </div>
+                <div class="lav2-dashboard-card">
+                  <div class="lav2-dash-icon" style="background: linear-gradient(135deg, #ec4899 0%, #db2777 100%);">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
+                      <path d="M20.59 13.41l-7.17 7.17a2 2 0 0 1-2.83 0L2 12V2h10l8.59 8.59a2 2 0 0 1 0 2.82z"/>
+                    </svg>
+                  </div>
+                  <div class="lav2-dash-info">
+                    <span class="lav2-dash-value" id="lav2-total-pecas-geral">0</span>
+                    <span class="lav2-dash-label">Peças Lavadas</span>
+                  </div>
+                </div>
+                <div class="lav2-dashboard-card">
+                  <div class="lav2-dash-icon" style="background: linear-gradient(135deg, #8b5cf6 0%, #7c3aed 100%);">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
+                      <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
+                      <circle cx="9" cy="7" r="4"/>
+                      <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
+                      <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                    </svg>
+                  </div>
+                  <div class="lav2-dash-info">
+                    <span class="lav2-dash-value">4</span>
+                    <span class="lav2-dash-label">Clientes Ativos</span>
+                  </div>
+                </div>
+              </div>
+
               <!-- Header -->
               <div class="lav2-header">
                 <div class="lav2-header-left">
