--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2157,6 +2157,60 @@
         padding: 10px 12px;
         font-size: 12px;
       }
+      /* Mobile small - mais compacto */
+      .lav2-header {
+        padding: 14px 16px;
+        border-radius: 14px;
+      }
+      .lav2-header-content {
+        flex-direction: column;
+        gap: 10px;
+        align-items: stretch !important;
+      }
+      .lav2-header-actions {
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+      .lav2-period-badge {
+        padding: 8px 12px;
+        font-size: 12px;
+      }
+      .lav2-btn-export {
+        padding: 10px 16px;
+        font-size: 13px;
+      }
+      .lav2-header-icon {
+        width: 40px;
+        height: 40px;
+      }
+      .lav2-header-icon svg {
+        width: 20px;
+        height: 20px;
+      }
+      .lav2-header-title h2 {
+        font-size: 18px;
+      }
+      .lav2-header-title p {
+        font-size: 11px;
+      }
+      .lav2-dashboard-geral {
+        gap: 8px;
+        margin-bottom: 14px;
+      }
+      .lav2-dashboard-card {
+        padding: 12px 14px;
+        gap: 10px;
+      }
+      .lav2-geral-icon {
+        width: 36px;
+        height: 36px;
+      }
+      .lav2-geral-value {
+        font-size: 18px;
+      }
+      .lav2-geral-label {
+        font-size: 10px;
+      }
     }
 
     /* Sidebar Clientes */
@@ -2362,7 +2416,18 @@
       gap: 16px;
     }
     @media (max-width: 1200px) { .lav2-stats-row { grid-template-columns: repeat(2, 1fr); } }
-    @media (max-width: 600px) { .lav2-stats-row { grid-template-columns: 1fr; } }
+    @media (max-width: 600px) { 
+      .lav2-stats-row { 
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+      }
+    }
+    @media (max-width: 400px) { 
+      .lav2-stats-row { 
+        grid-template-columns: repeat(2, 1fr);
+        gap: 8px;
+      }
+    }
 
     .lav2-stat-card {
       position: relative;
@@ -2374,6 +2439,12 @@
       border-radius: 16px;
       overflow: hidden;
       transition: all 0.3s;
+    }
+    @media (max-width: 600px) {
+      .lav2-stat-card {
+        padding: 12px;
+        border-radius: 12px;
+      }
     }
     .lav2-stat-card:hover {
       border-color: rgba(236, 72, 153, 0.4);
@@ -2405,6 +2476,16 @@
       color: #ec4899;
       margin-bottom: 12px;
     }
+    @media (max-width: 600px) {
+      .lav2-stat-icon {
+        width: 32px; height: 32px;
+        border-radius: 8px;
+        margin-bottom: 8px;
+      }
+      .lav2-stat-icon svg {
+        width: 16px; height: 16px;
+      }
+    }
     .lav2-stat-card.purple .lav2-stat-icon { background: rgba(168, 85, 247, 0.1); color: #a855f7; }
     .lav2-stat-card.blue .lav2-stat-icon { background: rgba(59, 130, 246, 0.1); color: #3b82f6; }
     .lav2-stat-card.gold .lav2-stat-icon { background: rgba(245, 158, 11, 0.1); color: #f59e0b; }
@@ -2414,10 +2495,20 @@
       color: #fff;
       text-shadow: 0 0 20px rgba(236, 72, 153, 0.4);
     }
+    @media (max-width: 600px) {
+      .lav2-stat-value {
+        font-size: 18px !important;
+      }
+    }
     .lav2-stat-label {
       font-size: 12px;
       color: rgba(255, 255, 255, 0.5);
       margin-top: 4px;
+    }
+    @media (max-width: 600px) {
+      .lav2-stat-label {
+        font-size: 10px;
+      }
     }
 
     /* Entry Form Glass Card */
@@ -2429,6 +2520,11 @@
       border-radius: 20px;
       overflow: hidden;
     }
+    @media (max-width: 600px) {
+      .lav2-entry-card {
+        border-radius: 14px;
+      }
+    }
     .lav2-entry-header {
       display: flex;
       justify-content: space-between;
@@ -2436,6 +2532,14 @@
       padding: 20px 24px;
       background: linear-gradient(90deg, rgba(236, 72, 153, 0.1) 0%, transparent 100%);
       border-bottom: 1px solid rgba(236, 72, 153, 0.1);
+    }
+    @media (max-width: 600px) {
+      .lav2-entry-header {
+        flex-direction: column;
+        gap: 10px;
+        padding: 14px 16px;
+        align-items: stretch;
+      }
     }
     .lav2-entry-header h3 {
       display: flex;
@@ -2446,6 +2550,12 @@
       color: #fff;
       margin: 0;
     }
+    @media (max-width: 600px) {
+      .lav2-entry-header h3 {
+        font-size: 14px;
+        gap: 8px;
+      }
+    }
     .lav2-entry-header h3 svg { color: #ec4899; }
     .lav2-entry-header .lav2-date-input {
       padding: 10px 16px;
@@ -2455,7 +2565,16 @@
       color: #fff;
       font-size: 14px;
     }
+    @media (max-width: 600px) {
+      .lav2-entry-header .lav2-date-input {
+        padding: 8px 12px;
+        font-size: 13px;
+      }
+    }
     .lav2-entry-body { padding: 24px; }
+    @media (max-width: 600px) {
+      .lav2-entry-body { padding: 14px; }
+    }
 
     /* Dynamic Form based on client */
     .lav2-form-grid {
@@ -2486,6 +2605,16 @@
       text-align: center;
       transition: all 0.3s;
     }
+    @media (max-width: 600px) {
+      .lav2-form-field input {
+        padding: 10px 12px;
+        font-size: 16px;
+        border-radius: 8px;
+      }
+      .lav2-form-field label {
+        font-size: 10px;
+      }
+    }
     .lav2-form-field input:focus {
       outline: none;
       border-color: #ec4899;
@@ -2504,6 +2633,14 @@
       border-radius: 14px;
       margin-bottom: 20px;
     }
+    @media (max-width: 600px) {
+      .lav2-total-box {
+        flex-direction: column;
+        gap: 12px;
+        padding: 14px 16px;
+        text-align: center;
+      }
+    }
     .lav2-total-info {
       display: flex;
       flex-direction: column;
@@ -2513,6 +2650,11 @@
       font-size: 14px;
       color: rgba(255, 255, 255, 0.6);
     }
+    @media (max-width: 600px) {
+      .lav2-total-pieces {
+        font-size: 12px;
+      }
+    }
     .lav2-total-pieces span { color: #ec4899; font-weight: 600; }
     .lav2-total-value {
       font-size: 32px;
@@ -2521,6 +2663,11 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
+    }
+    @media (max-width: 600px) {
+      .lav2-total-value {
+        font-size: 24px;
+      }
     }
     .lav2-save-btn {
       display: flex;
@@ -9065,6 +9212,14 @@
             <input type="number" id="detail-break-minutes" min="0" placeholder="Ex: 60 para 1h de almoço" style="font-size: 13px;">
             <small style="color: var(--text-secondary); font-size: 11px;">Será descontado do tempo total trabalhado</small>
           </div>
+        </div>
+        <div style="margin-top: 14px; padding-top: 12px; border-top: 1px solid rgba(212, 175, 55, 0.2);">
+          <button type="button" class="btn-small btn-success" onclick="closeOrderWithRetroactiveDates()" style="width: 100%; padding: 10px; font-weight: 600;">
+            ✓ Fechar OS com Datas Retroativas
+          </button>
+          <small style="color: var(--text-secondary); font-size: 11px; display: block; text-align: center; margin-top: 6px;">
+            Preencha as datas acima e clique para concluir
+          </small>
         </div>
       </div>
 
