--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2124,74 +2124,82 @@
     }
     @media (max-width: 500px) {
       .lav2-container {
-        padding: 0 6px;
+        padding: 0 8px;
         padding-bottom: 85px;
-        gap: 10px;
+        gap: 8px;
       }
+      /* Clientes em 4 colunas compactas */
       .lav2-sidebar {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 6px;
+        grid-template-columns: repeat(4, 1fr) !important;
+        gap: 4px;
       }
       .lav2-client-card {
-        padding: 8px 10px;
-        border-radius: 8px;
-      }
-      .lav2-client-name {
-        font-size: 11px;
-        margin-bottom: 2px;
-      }
-      .lav2-client-info {
-        font-size: 9px;
-      }
-      .lav2-client-info span:last-child {
-        display: none; /* Esconder ciclo no mobile pequeno */
-      }
-      /* Dashboard geral mobile */
-      .lav2-dashboard-geral {
-        grid-template-columns: repeat(3, 1fr) !important;
-        gap: 6px !important;
-        margin-bottom: 10px !important;
-      }
-      .lav2-dashboard-card {
-        padding: 10px 8px !important;
-        gap: 8px !important;
-        flex-direction: column !important;
+        padding: 6px 4px;
+        border-radius: 6px;
         text-align: center;
       }
-      .lav2-geral-icon {
-        width: 28px !important;
-        height: 28px !important;
+      .lav2-client-name {
+        font-size: 9px;
+        margin-bottom: 1px;
+        justify-content: center;
       }
-      .lav2-geral-icon svg {
-        width: 14px !important;
-        height: 14px !important;
+      .lav2-client-name .client-dot {
+        width: 6px;
+        height: 6px;
       }
-      .lav2-geral-value {
-        font-size: 14px !important;
+      .lav2-client-info {
+        display: none; /* Esconder info no mobile pequeno */
       }
-      .lav2-geral-label {
+      /* Dashboard geral mobile - 2 cards */
+      .lav2-dashboard-geral {
+        grid-template-columns: repeat(2, 1fr) !important;
+        gap: 6px !important;
+        margin-bottom: 8px !important;
+      }
+      .lav2-dashboard-card {
+        padding: 8px 6px !important;
+        gap: 6px !important;
+        flex-direction: row !important;
+        text-align: left;
+      }
+      .lav2-geral-icon,
+      .lav2-dash-icon {
+        width: 24px !important;
+        height: 24px !important;
+      }
+      .lav2-geral-icon svg,
+      .lav2-dash-icon svg {
+        width: 12px !important;
+        height: 12px !important;
+      }
+      .lav2-geral-value,
+      .lav2-dash-value {
+        font-size: 13px !important;
+      }
+      .lav2-geral-label,
+      .lav2-dash-label {
         font-size: 8px !important;
       }
-      /* Header mobile */
+      /* Header mobile compacto */
       .lav2-header {
-        padding: 12px !important;
-        border-radius: 12px !important;
+        padding: 10px !important;
+        border-radius: 10px !important;
       }
       .lav2-header-left {
-        gap: 10px !important;
+        gap: 8px !important;
       }
-      .lav2-header-icon {
-        width: 36px !important;
-        height: 36px !important;
+      .lav2-icon-badge {
+        width: 32px !important;
+        height: 32px !important;
       }
-      .lav2-header-icon svg {
-        width: 18px !important;
-        height: 18px !important;
+      .lav2-icon-badge svg {
+        width: 16px !important;
+        height: 16px !important;
       }
-      .lav2-header-title h2 {
+      .lav2-header-title {
         font-size: 14px !important;
       }
-      .lav2-header-title p {
+      .lav2-header-sub {
         font-size: 10px !important;
       }
       .lav2-header-content {
@@ -2201,93 +2209,104 @@
       }
       .lav2-header-actions {
         display: flex;
-        gap: 6px;
+        gap: 4px;
         justify-content: space-between;
       }
       .lav2-period-badge {
-        padding: 6px 10px !important;
-        font-size: 11px !important;
+        padding: 5px 8px !important;
+        font-size: 10px !important;
         flex: 1;
         text-align: center;
       }
       .lav2-btn-export {
-        padding: 8px 12px !important;
-        font-size: 11px !important;
+        padding: 6px 10px !important;
+        font-size: 10px !important;
         flex: 1;
       }
-      /* Stats row mobile */
+      /* Stats row mobile - 3 colunas */
       .lav2-stats-row {
-        grid-template-columns: repeat(4, 1fr) !important;
+        grid-template-columns: repeat(3, 1fr) !important;
         gap: 6px !important;
       }
       .lav2-stat-card {
-        padding: 10px 6px !important;
-        border-radius: 10px !important;
+        padding: 8px 4px !important;
+        border-radius: 8px !important;
       }
       .lav2-stat-icon {
-        width: 24px !important;
-        height: 24px !important;
-        margin-bottom: 6px !important;
-        border-radius: 6px !important;
+        width: 20px !important;
+        height: 20px !important;
+        margin-bottom: 4px !important;
+        border-radius: 5px !important;
       }
       .lav2-stat-icon svg {
-        width: 12px !important;
-        height: 12px !important;
+        width: 10px !important;
+        height: 10px !important;
       }
       .lav2-stat-value {
         font-size: 14px !important;
       }
       .lav2-stat-label {
-        font-size: 8px !important;
+        font-size: 7px !important;
+        white-space: nowrap;
       }
       /* Entry card mobile */
       .lav2-entry-card {
-        border-radius: 12px !important;
+        border-radius: 10px !important;
       }
       .lav2-entry-header {
-        padding: 10px 12px !important;
+        padding: 8px 10px !important;
         flex-direction: row !important;
         align-items: center !important;
         justify-content: space-between !important;
       }
       .lav2-entry-header h3 {
-        font-size: 12px !important;
-        gap: 6px !important;
+        font-size: 11px !important;
+        gap: 5px !important;
       }
       .lav2-entry-header h3 svg {
-        width: 14px !important;
-        height: 14px !important;
+        width: 12px !important;
+        height: 12px !important;
       }
       .lav2-date-input {
-        padding: 6px 10px !important;
-        font-size: 12px !important;
+        padding: 5px 8px !important;
+        font-size: 11px !important;
       }
       .lav2-entry-body {
-        padding: 10px 12px !important;
+        padding: 8px 10px !important;
       }
-      .lav2-form-fields {
+      /* Form grid - 2x2 para 4 campos */
+      .lav2-form-grid {
         grid-template-columns: repeat(2, 1fr) !important;
-        gap: 8px !important;
+        gap: 6px !important;
+        margin-bottom: 10px !important;
       }
       .lav2-form-field {
-        gap: 4px !important;
+        gap: 3px !important;
       }
       .lav2-form-field label {
-        font-size: 9px !important;
+        font-size: 8px !important;
+        text-transform: uppercase;
+        letter-spacing: 0.2px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
       .lav2-form-field input {
-        font-size: 14px !important;
-        padding: 8px !important;
-        border-radius: 8px !important;
+        font-size: 18px !important;
+        padding: 10px 8px !important;
+        border-radius: 6px !important;
+        text-align: center;
+        -webkit-appearance: none;
+        -moz-appearance: textfield;
       }
       /* Total box mobile */
       .lav2-total-box {
-        padding: 10px 12px !important;
+        padding: 8px 10px !important;
         flex-direction: row !important;
         align-items: center !important;
-        gap: 10px !important;
-        border-radius: 10px !important;
-        margin-bottom: 12px !important;
+        gap: 8px !important;
+        border-radius: 8px !important;
+        margin-bottom: 10px !important;
       }
       .lav2-total-info {
         flex: 1;
@@ -2296,31 +2315,39 @@
         font-size: 11px !important;
       }
       .lav2-total-value {
-        font-size: 18px !important;
+        font-size: 16px !important;
       }
       .lav2-save-btn {
-        padding: 10px 16px !important;
-        font-size: 12px !important;
-        border-radius: 8px !important;
+        padding: 8px 12px !important;
+        font-size: 11px !important;
+        border-radius: 6px !important;
+        gap: 4px !important;
+      }
+      .lav2-save-btn svg {
+        width: 14px !important;
+        height: 14px !important;
       }
       /* Entries list mobile */
-      .lav2-entries-card {
-        border-radius: 12px !important;
+      .lav2-entries-card,
+      .lav2-history-card {
+        border-radius: 10px !important;
       }
-      .lav2-entries-header {
-        padding: 10px 12px !important;
+      .lav2-entries-header,
+      .lav2-history-header {
+        padding: 8px 10px !important;
       }
-      .lav2-entries-header h4 {
-        font-size: 12px !important;
+      .lav2-entries-header h4,
+      .lav2-history-header h3 {
+        font-size: 11px !important;
       }
       .lav2-entries-list {
-        max-height: 200px !important;
-        padding: 8px !important;
+        max-height: 180px !important;
+        padding: 6px !important;
       }
       .lav2-entry-item {
-        padding: 8px 10px !important;
-        font-size: 11px !important;
-        border-radius: 8px !important;
+        padding: 6px 8px !important;
+        font-size: 10px !important;
+        border-radius: 6px !important;
       }
     }
 
