--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10347,6 +10347,21 @@
             </div>
           </div>
 
+          <!-- Tabs de Navegação: Fórum / Notas & Boletos -->
+          <div class="relatorios-tabs" style="display: flex; gap: 8px; padding: 0 20px; margin-bottom: 16px;">
+            <button class="relatorios-tab active" id="tab-forum" onclick="switchRelatoriosTab('forum')" style="padding: 12px 24px; background: linear-gradient(135deg, #8b5cf6, #7c3aed); border: none; border-radius: 12px; color: #fff; font-size: 14px; font-weight: 600; cursor: pointer; display: flex; align-items: center; gap: 8px; transition: 0.3s;">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/></svg>
+              Fórum
+            </button>
+            <button class="relatorios-tab" id="tab-notas" onclick="switchRelatoriosTab('notas')" style="padding: 12px 24px; background: rgba(255,255,255,0.05); border: 1px solid rgba(255,255,255,0.1); border-radius: 12px; color: rgba(255,255,255,0.6); font-size: 14px; font-weight: 600; cursor: pointer; display: flex; align-items: center; gap: 8px; transition: 0.3s; display: none;" id="tab-notas-container">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><polyline points="14 2 14 8 20 8"/><line x1="12" y1="18" x2="12" y2="12"/><line x1="9" y1="15" x2="15" y2="15"/></svg>
+              Notas & Boletos
+              <span id="notas-pending-badge" style="display: none; background: #ef4444; color: #fff; font-size: 10px; padding: 2px 6px; border-radius: 10px; font-weight: 700;">0</span>
+            </button>
+          </div>
+
+          <!-- Conteúdo do Fórum -->
+          <div id="forum-content">
           <!-- Barra de Filtros Premium -->
           <div class="forum-toolbar">
             <div class="forum-filters">
@@ -10407,6 +10422,68 @@
               <!-- Posts serão renderizados aqui -->
             </div>
           </div>
+          </div><!-- Fim forum-content -->
+
+          <!-- ========== SEÇÃO NOTAS & BOLETOS ========== -->
+          <div id="notas-content" style="display: none;">
+            <!-- Header Notas -->
+            <div style="display: flex; justify-content: space-between; align-items: center; padding: 0 20px 20px 20px; flex-wrap: wrap; gap: 16px;">
+              <div>
+                <h2 style="font-size: 20px; font-weight: 700; color: #fff; margin: 0 0 4px 0; display: flex; align-items: center; gap: 10px;">
+                  <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#10b981" stroke-width="2"><rect x="2" y="4" width="20" height="16" rx="2"/><path d="M7 15h0M2 9h20"/></svg>
+                  Gestão Financeira
+                </h2>
+                <p style="font-size: 13px; color: rgba(255,255,255,0.5); margin: 0;">Notas fiscais e boletos de fornecedores</p>
+              </div>
+              <button onclick="openNovaNotaModal()" style="padding: 12px 24px; background: linear-gradient(135deg, #10b981, #059669); border: none; border-radius: 12px; color: #fff; font-size: 14px; font-weight: 600; cursor: pointer; display: flex; align-items: center; gap: 8px; box-shadow: 0 4px 15px rgba(16, 185, 129, 0.3);">
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 5v14M5 12h14"/></svg>
+                Nova Entrada
+              </button>
+            </div>
+
+            <!-- Stats Cards Notas -->
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 16px; padding: 0 20px 24px 20px;">
+              <div style="background: rgba(16, 185, 129, 0.1); border: 1px solid rgba(16, 185, 129, 0.3); border-radius: 16px; padding: 20px;">
+                <p style="font-size: 11px; color: rgba(255,255,255,0.5); text-transform: uppercase; letter-spacing: 1px; margin: 0 0 8px 0;">Total Pendente</p>
+                <p style="font-size: 28px; font-weight: 800; color: #10b981; margin: 0;" id="notas-total-pendente">R$ 0,00</p>
+              </div>
+              <div style="background: rgba(251, 146, 60, 0.1); border: 1px solid rgba(251, 146, 60, 0.3); border-radius: 16px; padding: 20px;">
+                <p style="font-size: 11px; color: rgba(255,255,255,0.5); text-transform: uppercase; letter-spacing: 1px; margin: 0 0 8px 0;">Vence em 7 dias</p>
+                <p style="font-size: 28px; font-weight: 800; color: #fb923c; margin: 0;" id="notas-vence-7dias">0</p>
+              </div>
+              <div style="background: rgba(239, 68, 68, 0.1); border: 1px solid rgba(239, 68, 68, 0.3); border-radius: 16px; padding: 20px;">
+                <p style="font-size: 11px; color: rgba(255,255,255,0.5); text-transform: uppercase; letter-spacing: 1px; margin: 0 0 8px 0;">Vencidos</p>
+                <p style="font-size: 28px; font-weight: 800; color: #ef4444; margin: 0;" id="notas-vencidos">0</p>
+              </div>
+              <div style="background: rgba(139, 92, 246, 0.1); border: 1px solid rgba(139, 92, 246, 0.3); border-radius: 16px; padding: 20px;">
+                <p style="font-size: 11px; color: rgba(255,255,255,0.5); text-transform: uppercase; letter-spacing: 1px; margin: 0 0 8px 0;">Este Mês</p>
+                <p style="font-size: 28px; font-weight: 800; color: #a78bfa; margin: 0;" id="notas-este-mes">0</p>
+              </div>
+            </div>
+
+            <!-- Filtros Notas -->
+            <div style="display: flex; gap: 8px; padding: 0 20px 16px 20px; flex-wrap: wrap;">
+              <button class="notas-filter active" onclick="setNotasFilter('all', this)" style="padding: 10px 18px; background: linear-gradient(135deg, #10b981, #059669); border: none; border-radius: 10px; color: #fff; font-size: 13px; font-weight: 600; cursor: pointer;">Todos</button>
+              <button class="notas-filter" onclick="setNotasFilter('pendente', this)" style="padding: 10px 18px; background: rgba(255,255,255,0.05); border: 1px solid rgba(255,255,255,0.1); border-radius: 10px; color: rgba(255,255,255,0.6); font-size: 13px; font-weight: 500; cursor: pointer;">Pendentes</button>
+              <button class="notas-filter" onclick="setNotasFilter('aguardando', this)" style="padding: 10px 18px; background: rgba(255,255,255,0.05); border: 1px solid rgba(255,255,255,0.1); border-radius: 10px; color: rgba(255,255,255,0.6); font-size: 13px; font-weight: 500; cursor: pointer;">Aguardando</button>
+              <button class="notas-filter" onclick="setNotasFilter('pago', this)" style="padding: 10px 18px; background: rgba(255,255,255,0.05); border: 1px solid rgba(255,255,255,0.1); border-radius: 10px; color: rgba(255,255,255,0.6); font-size: 13px; font-weight: 500; cursor: pointer;">Pagos</button>
+              <button class="notas-filter" onclick="setNotasFilter('vencido', this)" style="padding: 10px 18px; background: rgba(255,255,255,0.05); border: 1px solid rgba(255,255,255,0.1); border-radius: 10px; color: rgba(255,255,255,0.6); font-size: 13px; font-weight: 500; cursor: pointer;">Vencidos</button>
+              <div style="flex: 1; min-width: 200px;">
+                <input type="text" placeholder="Buscar por empresa, descrição..." id="notas-search" oninput="searchNotas(this.value)" style="width: 100%; padding: 10px 16px; background: rgba(255,255,255,0.05); border: 1px solid rgba(255,255,255,0.1); border-radius: 10px; color: #fff; font-size: 13px;">
+              </div>
+            </div>
+
+            <!-- Lista de Notas -->
+            <div id="notas-list" style="padding: 0 20px;">
+              <!-- Notas serão renderizadas aqui -->
+              <div style="text-align: center; padding: 60px 20px; color: rgba(255,255,255,0.4);">
+                <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" style="margin-bottom: 16px; opacity: 0.5;"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><polyline points="14 2 14 8 20 8"/></svg>
+                <p style="font-size: 16px; margin: 0 0 8px 0;">Nenhuma nota ou boleto cadastrado</p>
+                <p style="font-size: 13px; margin: 0;">Clique em "Nova Entrada" para adicionar</p>
+              </div>
+            </div>
+          </div>
+          <!-- ========== FIM NOTAS & BOLETOS ========== -->
 
           <!-- Visualização de Post -->
           <div id="report-viewer" class="forum-post-viewer hidden">
